[tool.poetry]
name = "recsys"
version = "0.1.0"
description = ""
authors = ["andryousha <andrey.shichkov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
fastai = "^2.7.12"
gdown = "^4.7.1"
annoy = "^1.17.2"
google = "^3.0.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
